--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>Vite Template</title>
   </head>
   <body>
+    <h1>Hola</h1>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
